--- a/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/partials/foto.html
+++ b/AngularJS1- Crie webapps poderosas/aplicacao-curso/public/partials/foto.html
@@ -39,6 +39,16 @@
             </textarea>
         </div>
 
+        <div class="form-group">
+            <label>Grupo</label>
+            <select name="group" class="form-control" ng-controller="GruposController" ng-model="foto.grupo" ng-options="grupo._id as (grupo.nome | uppercase) for grupo in grupos">
+                <option value="">Selecione grupo</option>                
+            </select>
+            <span ng-show="formulario.$submitted && formulario.group.$error.maxlength" class="form-control alert-danger">
+                Grupo obrigatório
+            </span>
+        </div>
+
         <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
         </button>
